package proyecto;

public class Edificio {
    static Habitacion habitacion;

    static void areaConMayorSuciedad() {

    }

    static void esPosibleMoverse(int x, int y) {

    }

    static void main(String[] args) {

    }
}
