package proyecto;

public class Habitacion {
    protected Dibujable[][] suelo;
    protected int ancho;
    protected int largo;

    public Habitacion(int ancho, int largo) {

    }

    public void limpiarHabitacion() {

    }

    public void mostrarHabitacion() {

    }

    public void suciedadTotal() {

    }

    public void areaConMayorSuciedad() {

    }

    public void suciedadRestante() {

    }

    public void esTraspasable(int x, int y) {

    }

}
