package proyecto;

public class Suciedad implements Dibujable{
    String[] nivelesDeSuciedad;
    int nivelDeSuciedad;
    
    public Suciedad(){

    }

    public void getNivelDeSuciedad(){

    }

    public void aumentarSuciedad(){

    }

    public void reducirSuciedad(){

    }

    public void dibujar() {
        // TODO Auto-generated method stub
        
    }
}
